--- a/config.example.env
+++ b/config.example.env
@@ -6,5 +6,14 @@ NODE_ENV=development
 # 在GitHub仓库的Settings > Webhooks中设置的密钥
 GITHUB_WEBHOOK_SECRET=your_webhook_secret_here
 
+# GitHub API配置
+# 用于获取PR diff和添加评论，需要repo权限
+GITHUB_TOKEN=your_github_personal_access_token_here
+
+# DeepSeek API配置
+# DeepSeek的API Key和Base URL
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_BASE_URL=https://api.deepseek.com
+
 # 其他配置（可选）
 # LOG_LEVEL=info
