--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
