--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
-.env.production
+# .env.production
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
